--- a/src/app/products/product-card/product-card.component.html
+++ b/src/app/products/product-card/product-card.component.html
@@ -15,7 +15,10 @@
       </ng-template>
 
       <button class="btn btn-outline-primary" (click)="goToDetails(product.id)">
-        Add to Cart
+        Details
+      </button>
+      <button class="btn btn-outline-primary" (click)="addToCart(product.id)">
+        Add To Cart
       </button>
     </div>
   </div>
