--- a/src/app/products/all-product/all-product.component.html
+++ b/src/app/products/all-product/all-product.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h1 class="text-center text-success py-3">Our Products</h1>
   <div class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col" *ngFor="let product of products">
+    <div class="col" *ngFor="let product of productsList">
       <app-product-card [product]="product"></app-product-card>
     </div>
   </div>
