--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -36,6 +36,14 @@
             >Login</a
           >
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            routerLinkActive="text-danger border border-2 border-danger"
+            routerLink="/cart"
+            ><i class="fa-solid fa-cart-shopping"></i
+          ></a>
+        </li>
       </ul>
     </div>
   </div>
