--- a/src/app/products/product-card/product-card.component.html
+++ b/src/app/products/product-card/product-card.component.html
@@ -17,7 +17,7 @@
       <button class="btn btn-outline-primary" (click)="goToDetails(product.id)">
         Details
       </button>
-      <button class="btn btn-outline-primary" (click)="addToCart(product.id)">
+      <button class="btn btn-outline-primary" (click)="addToCart()">
         Add To Cart
       </button>
     </div>
