--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -41,8 +41,8 @@
             class="nav-link"
             routerLinkActive="text-danger border border-2 border-danger"
             routerLink="/cart"
-            ><i class="fa-solid fa-cart-shopping"></i
-          ></a>
+            ><i class="fa-solid fa-cart-shopping"></i>
+          </a>
         </li>
       </ul>
     </div>
